--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Currículum - Ángeles Gallego Castaño</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CV Angeles</h1>
+  <div id="app" class="container"></div>
+  <script src="script.js"></script>
 </body>
 </html>
