--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currículum - Ángeles Gallego Castaño</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="app" class="container"></div>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
+
